--- a/trunk/classroomweb/WebContent/front/templatemo_style.css
+++ b/trunk/classroomweb/WebContent/front/templatemo_style.css
@@ -103,10 +103,10 @@ em { font-size: 14px;color: #2d7ad1; }
 }
 
 #site_title a strong {
-	color: #f19005;
+	color: #61a4f0;
 }
 .sidebar_box a strong {
-	color: #f19005;
+	color: #61a4f0;
 }
 .sidebar_box last a strong {
 	color: #f19005;
