--- a/classroomweb/WebContent/front/templatemo_style.css
+++ b/classroomweb/WebContent/front/templatemo_style.css
@@ -18,9 +18,9 @@ a:hover { color: #CC0000; text-decoration: underline; }
 p { margin: 0 0 10px 0; padding: 0; }
 img { border: none; }
 
-h1 { font-size: 30px; font-weight: normal; margin: 0 0 30px 0; padding: 5px 0; }
-h2 { font-size: 28px; font-weight: normal; margin: 0 0 30px 0; padding: 0; }
-h3 { font-size: 19px; margin: 0 0 15px 0; padding: 0; padding: 0; color: #333; font-weight: normal; }
+h1 { font-size: 30px; font-weight: normal; margin: 0 0 30px 0; padding: 5px 0;font-family:楷体/* Times New Roman */; }
+h2 { font-size: 28px; font-weight: normal; margin: 0 0 30px 0; padding: 0;font-family:楷体/* Times New Roman */; }
+h3 { font-size: 19px; margin: 0 0 15px 0; padding: 0; padding: 0; color: #333; font-weight: normal;font-family:楷体/* Times New Roman */; }
 h4 { font-size: 18px; margin: 0 0 15px 0; padding: 0; }
 h5 { font-size: 16px; margin: 0 0 10px 0; padding: 0; color: #333; }
 h6 { font-size: 14px; margin: 0 0 5px 0; padding: 0; color: #333; }
