添加时间轴

--- a/classroomweb/WebContent/front/css/tiezi.css
+++ b/classroomweb/WebContent/front/css/tiezi.css
@@ -32,7 +32,7 @@
 .fatie_button1{
 	margin:10px;
 	display:block;
-	background-color:pink;;
+	background-color:#999;
 	width:100px;
 	height:40px;
 	text-align:center;
