--- a/trunk/classroomweb/WebContent/front/templatemo_style.css
+++ b/trunk/classroomweb/WebContent/front/templatemo_style.css
@@ -86,6 +86,7 @@ em { font-size: 14px;color: #2d7ad1; }
 
 #site_title {
 	margin-bottom: 20px;
+	/* background: url(images/sky.jpg); */
 }
 
 #site_title h1 {
