--- a/classroomweb/WebContent/front/ueditor/themes/default/css/button.css
+++ b/classroomweb/WebContent/front/ueditor/themes/default/css/button.css
@@ -22,7 +22,7 @@
             background-repeat: repeat-x;
             border: 1px solid #cccccc;
             *border: 0;
-            border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+            border-color: orange/* #e6e6e6 #e6e6e6 #bfbfbf */;
             border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
             border-bottom-color: #b3b3b3;
             -webkit-border-radius: 4px;
