--- a/classroomweb/WebContent/front/css/luntan.css
+++ b/classroomweb/WebContent/front/css/luntan.css
@@ -10,13 +10,13 @@
 }
 #first {
 	height: 20px;
-	font-family:宋体/* Verdana, Geneva, sans-serif */;
+    font-family:微软雅黑;
 	font-size:14px;
 }
 #second {
 	margin-top:5px;
 	height: 20px;
-	font-family:Verdana, Geneva, sans-serif;
+	font-family:微软雅黑;
 	font-size:14px;
 }
 .session{
@@ -24,14 +24,14 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border: 1px solid #CCC;
-	font-family:Verdana, Geneva, sans-serif;
+	font-family:微软雅黑;
 	font-size:14px;
 }
 .Stitle{
 	height:40px;
 	line-height:40px;
 	background:#6CC;
-	font-family:Verdana, Geneva, sans-serif;
+	font-family:微软雅黑;
 	font-size:14px;
 	 
 }
@@ -41,7 +41,7 @@
 	border-top-width: 1px;
 	border-top-color: #CCC;
 	background-color: #AD8DAB;
-	font-family:Verdana, Geneva, sans-serif;
+	font-family:微软雅黑;
 	font-size:14px;
 	background:#6CC;
 }
@@ -58,7 +58,7 @@
 	
 }
 table{
-	font-family:宋体;
+	font-family:微软雅黑;
 	font-size:14px;
 }
 
